# qaops-ai

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  qaops.yaml  qaops.yaml.example
.github/workflows/: ci.yml
docs/adr/: 001-llm-generates-code-validates.md  002-single-llm-boundary.md  003-typed-models-between-stages.md  004-python-312-floor.md  005-defer-agent-registry-and-storage.md  006-text-input-only-v1.md  007-heuristic-deduplication.md  008-testing-strategy.md  009-configuration.md  010-prompt-templating.md  011-wire-schemas.md  012-duplicate-policy.md  013-second-provider-gemini.md  014-test-case-mapping.md  015-deterministic-validation.md  016-exporter-framework.md  017-cli-composition-root.md  018-document-ingestion.md  019-evaluation-mode.md  020-document-chunking.md  021-adaptive-chunking.md  022-multi-entry-pipeline.md  README.md
examples/: README.md  checkout.md  fund_transfer.md  login.md  video_playback.md
qaops/: __init__.py
qaops/cli/: __init__.py  app.py  config_loader.py  registry.py
qaops/config/: __init__.py  settings.py
qaops/core/: __init__.py  errors.py  ids.py  pipeline.py  protocols.py
qaops/entrypoints/: __init__.py  builder.py  entry_point.py  parsers.py
qaops/exporters/: __init__.py  _base.py  csv_bundle_exporter.py  csv_exporter.py  excel_exporter.py  json_exporter.py  markdown_exporter.py
qaops/ingestion/: __init__.py  docx_loader.py  html_loader.py  loader.py  normalize.py  pdf_loader.py  registry.py  text_loader.py
qaops/llm/: __init__.py  anthropic_client.py  client.py  errors.py  factory.py  gemini_client.py  mock.py  models.py  openrouter_client.py  prompt_loader.py  structured.py
qaops/models/: __init__.py  domain.py  enums.py
qaops/pipelines/: __init__.py
qaops/pipelines/chunking/: __init__.py  analyzer.py  capabilities.py  merge.py  planner.py  strategy.py
qaops/pipelines/test_design/: __init__.py  _support.py  analyzer.py  coverage.py  gaps.py  rules.py  scenarios.py  schemas.py  test_cases.py
qaops/prompts/: __init__.py  analyzer_v1.md  gap_analyzer_v1.md  rule_extractor_v1.md  scenario_generator_v1.md  test_case_generator_v1.md
scripts/: evaluate_analysis.py
tests/: test_adaptive_chunking.py  test_chunking.py  test_cli.py  test_core.py  test_csv_bundle.py  test_exporters.py  test_ingestion.py  test_llm.py  test_llm_anthropic.py  test_llm_gemini.py  test_llm_openrouter.py  test_models.py  test_multi_entry.py  test_pipeline_analysis.py  test_pipeline_coverage.py  test_pipeline_scenarios.py  test_pipeline_test_cases.py
