[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qaops-ai"
version = "0.9.0"
description = "QAOps AI - AI-powered Quality Engineering platform. V1: Test Design Agent."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Paresh Patil", email = "testerpareshpatil@gmail.com" }]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "anthropic>=0.60",
    "typer>=0.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
gemini = [
    "google-genai>=1.0",
]
openrouter = [
    "openai>=1.0",
]
excel = [
    "openpyxl>=3.1",
]
pdf = [
    "pypdf>=4.0",
]
dev = [
    "google-genai>=1.0",
    "openai>=1.0",
    "openpyxl>=3.1",
    "pypdf>=4.0",
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
qaops = "qaops.cli.app:main"

[tool.setuptools.packages.find]
include = ["qaops*"]

[tool.setuptools.package-data]
qaops = ["py.typed", "prompts/*.md"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # bugbear
    "SIM", # simplify
    "TCH", # type-checking imports
]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
show_error_codes = true

# openpyxl and PyYAML ship no type stubs and are optional/CLI dependencies.
# Scope the relaxation to those libraries only; strict mode holds everywhere else.
[[tool.mypy.overrides]]
module = ["openpyxl.*", "yaml"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --strict-markers"
markers = [
    "llm: tests that call a real LLM provider (excluded from CI)",
]
